# ModuTone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.models.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/resources/models/: model_catalog.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: instance_lock.rs  lifecycle.rs  mod.rs  shutdown.rs
src-tauri/src/commands/: generation.rs  mlx_runtime.rs  mod.rs  models.rs  platform.rs  profiles.rs  runtime.rs  settings.rs  tags.rs
src-tauri/src/contracts/: commands.rs  errors.rs  events.rs  mod.rs  shared.rs
src-tauri/src/domain/: jobs.rs  mod.rs  models.rs  profiles.rs  settings.rs  tags.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/os/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/diagnostics/: logger.rs  mod.rs
src-tauri/src/services/inference/: job_coordinator.rs  mlx_runtime.rs  mod.rs  model_catalog.rs  model_downloader.rs  prompt_composer.rs  worker_protocol.rs  worker_supervisor.rs
src-tauri/src/services/persistence/: atomic_writer.rs  builtin_data.rs  corruption.rs  metadata_store.rs  migration.rs  migration_log.rs  mod.rs  tests.rs  (+3 more)
src-tauri/tests/: privacy_regression.rs  upgrade_migration.rs
src-tauri/tests/integration/: mod.rs
(+112 files in other folders)
