[package]
name = "modutone-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "modutone_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
log4rs = { version = "1", features = ["gzip"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "io-util", "time", "sync", "rt", "fs"] }
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
